--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,6 @@
-image: Ubuntu2004 # образ для сборки
+image: Ubuntu1804 # образ для сборки
 
-stack: node 19 # окружение
+stack: node 16 # окружение
 
 branches:
   only:
@@ -18,7 +18,7 @@ build_script:
 
 deploy_script: # скрипт развёртывания
   - git config --global credential.helper store
-  - git config --global user.name marinaustinovich
-  - git config --global user.email marishka0509@mail.ru
-  - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com">"$HOME/.git-credentials"
+  - git config --global user.name AppVeyor
+  - git config --global user.email ci@appveyor.com
+  - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
   - npx push-dir --dir=dist --branch=gh-pages --force --verbose
